--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,26 +1,29 @@
-# +------------------------------+  +-----------------------------+
-# | Name      |    Function      |  |   Format  |   Color         |
-# |------------------------------|  |-----------------------------|
-# | Message   =    Popup message |  |     §l    =   BOLD          |
-# |------------------------------|  |     §o    =   Italic        |
-# |------------------------------|  |     §r    =   Reset         |
-# | $player   =    Player's Name |  |     §0    =   Black         |
-# +------------------------------+  |     §1    =   Dark Blue     |
-#                                   |     §2    =   Dark Green    |
-#                                   |     §3    =   Dark Aqua     |
-#                                   |     §4    =   Dark Red      |
-#                                   |     §5    =   Dark Purple   |
-#                                   |     §6    =   Gold          |
-#                                   |     §7    =   Gray          |
-#                                   |     §8    =   Dark Gray     |
-#                                   |     §9    =   Blue          |
-#                                   |     §a    =   Green         |
-#                                   |     §b    =   Aqua          |
-#                                   |     §c    =   Red           |
-#                                   |     §d    =   Light Purple  |
-#                                   |     §e    =   Yellow        |
-#                                   |     §f    =   White         |
-#                                   +-----------------------------+
+# +-----------------------------------+   +-----------------------------+
+# |    Name           |    Function   |   |   Format  |   Color         |
+# |-----------------------------------|   |-----------------------------|
+# | Message-Join   =  Join Popup      |   |     §l    =   BOLD          |
+# | Announce-Quit  =  Broadcast Quit  |   |     §o    =   Italic        |
+# | Announce-Join  =  Broadcast Join  |   |     §r    =   Reset         |
+# | {PLAYER}       =  Player's Name   |   |     §0    =   Black         |
+# +-----------------------------------+   |     §1    =   Dark Blue     |
+#                                         |     §2    =   Dark Green    |
+#                                         |     §3    =   Dark Aqua     |
+#                                         |     §4    =   Dark Red      |
+#                                         |     §5    =   Dark Purple   |
+#                                         |     §6    =   Gold          |
+#                                         |     §7    =   Gray          |
+#                                         |     §8    =   Dark Gray     |
+#                                         |     §9    =   Blue          |
+#                                         |     §a    =   Green         |
+#                                         |     §b    =   Aqua          |
+#                                         |     §c    =   Red           |
+#                                         |     §d    =   Light Purple  |
+#                                         |     §e    =   Yellow        |
+#                                         |     §f    =   White         |
+#                                         +-----------------------------+
 
-Message: "§l§6Welcome §4 {PLAYER} §6!"
+Message-Join: "§l§6Welcome §4{PLAYER}§6!"
+Announce-Join: "§l§4{PLAYER} §6Joined The Server!"
+Announce-Quit: "§l§4{PLAYER} Left The Server!"
+
 
